--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/core": "^0.34.3",
+    "@auth/core": "^0.41.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/prismjs": "^1.26.5",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "next-auth": "^4.24.13",
     "prismjs": "^1.30.0",
     "react": "19.2.0",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.17",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "postcss": "^8.4.35",
