--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "eslint"
+    "start:prod": "NODE_ENV=production next start -p 3001",
+    "lint": "eslint",
+    "db:init": "node -e \"require('./lib/db.ts').initDatabase()\"",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop halloff",
+    "pm2:restart": "pm2 restart halloff",
+    "pm2:logs": "pm2 logs halloff"
   },
   "dependencies": {
     "@auth/core": "^0.41.1",
